# zbox

./: CMakeLists.txt  bbuild.sh  prj.conf  readme.md  sysbuild.conf  zbox-root-rsa-2048.pem
boards/arm/: stm32f4_disco.overlay
docs/: mcuboot.md  project.md
src/: main.cpp
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: esp32c3_devkitm.conf  esp32c3_devkitm.overlay  stm32f4_disco.overlay
